@@ -1,14 +1,14 @@
-package org.example.server.application.service;
+package org.example.server.application.services;
 
-import org.example.server.application.dto.ContactDTO;
-import org.example.server.application.mapper.ContactMapper;
-import org.example.server.domain.entity.Contact;
-import org.example.server.domain.repository.ContactRepository;
+import org.example.server.application.dtos.ContactDTO;
+import org.example.server.application.mappers.ContactMapper;
+import org.example.server.domain.contact.Contact;
+import org.example.server.domain.contact.ContactRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 public class ContactService {
@@ -24,22 +24,28 @@ public class ContactService {
 	public ContactDTO saveContact(ContactDTO contactDTO) {
 		Contact contact = contactMapper.toEntity(contactDTO);
 		Contact savedContact = contactRepository.save(contact);
-		return contactMapper.toDto(savedContact);
+		return contactMapper.toDTO(savedContact);
 	}
 
 	public List<ContactDTO> getAllContacts() {
-		return contactRepository.findAll().stream()
-				.map(contactMapper::toDto)
-				.collect(Collectors.toList());
+		List<Contact> contacts = contactRepository.findAll();
+		return contacts.stream()
+				.map(contactMapper::toDTO)
+				.toList();
 	}
 
 	public ContactDTO getContactById(Long id) {
-		return contactRepository.findById(id)
-				.map(contactMapper::toDto)
-				.orElseThrow(() -> new RuntimeException("Contact not found with id: " + id));
+		Optional<Contact> contact = contactRepository.findById(id);
+		if (contact.isPresent()) {
+			return contactMapper.toDTO(contact.get());
+		}
+		throw new RuntimeException("Contact not found with id: " + id);
 	}
 
 	public void deleteContact(Long id) {
+		if (!contactRepository.existsById(id)) {
+			throw new RuntimeException("Contact not found with id: " + id);
+		}
 		contactRepository.deleteById(id);
 	}
 }
